Slides position full screen. Fixed flicker.

--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,23 @@
 *{}
 html{}
 body{
-background-image:url("../images/backgrounds/bg_1.png");
-background-size:cover;
+  background-image:url("../images/backgrounds/bg_1.png");
+  background-size:cover;
   overflow:hidden;
   color:green;
- 
+  
+  
 }
 
 #bg-img1{
-
-
+  
+  
   width:100%;
-  /* border:2px red solid; */
   /* background-size: */
 }
 #btn-menu{
   /* border:2px rgb(255, 255, 255) solid; */
-
+  
   height: 100%;
   width: 100%;
   position: fixed; /* Stay in place */
@@ -27,39 +27,39 @@ background-size:cover;
   background-color: rgba(0,0,0, 0.5); /* Black w/opacity */
   overflow-x: hidden; /* Disable horizontal scroll */
   transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
-
+  
   display: flex;
   justify-content: center;
   align-items: center;
-
+  
 }
 .col{
-
+  
   display: flex;
   justify-content: center;
   align-items: center;
-
-/*   
+  
+  /*   
   background-repeat:no-repeat;
   background-image:url('../images/backgrounds/g.png');
   padding:10px;
   border:20px;
   background-size:cover; */
-
-/* 
+  
+  /* 
   width:100%;
   height:100%;
   background-image:url("../images/backgrounds/g.png");
- background-repeat: no-repeat;
-
+  background-repeat: no-repeat;
+  
   size:cover; */
 }
 
 .container{
-
+  
 }
 /* .sky{
-
+  
   background-image:url("https://i.imgur.com/qL8GVwh.png");
   display:block;
   height:100%;
@@ -68,7 +68,7 @@ background-size:cover;
   padding:0;
   position:fixed;
   
-
+  
   top:0;
   left:0;
   background-size:contain;
@@ -77,19 +77,19 @@ background-size:cover;
   background-image:url("../images/backgrounds/bg_0.png");
   /* z-index: 00; */
   top:0;
-/* left:0; */
-
-display: flex;
-justify-content: center;
-align-items: center;
-padding-top:10%;
-
-
+  /* left:0; */
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top:10%;
+  
+  
 }
 
 #about{
-/* position:relative; */
-/* z-index:600; */
+  /* position:relative; */
+  /* z-index:600; */
 }
 
 /* .amergin{
@@ -101,70 +101,74 @@ padding-top:10%;
   margin:0% 10% 3% 10%;
   background-size:contain;
   z-index: 500;
- } */
+} */
 /* .d-block.w-100 */
 .active  {
   /* transition: transform  !important; */
   z-index: 10;
-
+  
 }
 
 #holdImg{
-
+  
   width:100%;
   /* border:2px purple solid; */
   /* background-size: */
-position:fixed;
-display: flex;
-justify-content: center;
-align-items: center;
-z-index: 50 !important;
-/* padding-top:10%; */
-
-
+  position:fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 50 !important;
+  /* padding-top:10%; */
+  
+  
 }
 #holdSlide{
-
+  
   padding-left: 19px;
   padding-top: 11px;
-position:fixed;
-
+  position:fixed;
+  
   opacity:0;
-
-display: flex;
-justify-content: center;
+  
+  display: flex;
+  justify-content: center;
 align-items: center;
  
 z-index: 100 !important;
 
 
 }
-.carousel, .carousel-item{
+ .carousel-item{
+
   display: flex;
 justify-content: center;
 align-items: center;
 margin:5%;
   width:90%;
   max-height: 90% !important;
-z-index: 400 !important;
 
   /* border: 2px solid blue; */
 }
- .active{
+
+.carousel-inner,  .d-block.w-100{
   position:fixed;
-  top:0%;
-  left:0%;
-  /* display: flex; */
-  justify-content: center;
-  align-items: center;
-  /* max-height: 90% !important; */
-  z-index: 600 !important;
-  width:80%;
+  /* justify-content: center;
+align-items: center; */
+  top:10%;
+  left:10%;
+  max-width:80% !important;
+  max-height: 80% !important;
 } 
 
+.carousel-inner{
 
 
+  margin-left:5%;
+   margin:5%;
+   width:100%;
+   max-height: 100% !important;
+ 
 
 
-
-
+} 
